--- a/build.xml
+++ b/build.xml
@@ -41,11 +41,13 @@
       <!-- We can compile against any swt version-->
       <include name="swt-win32*.jar" />
     </fileset>
+    <fileset dir="${lib.dl}" id="classpath.runtime">
+      <include name="commons-codec-*.jar" />
+    </fileset>
     <fileset dir="${lib.main}" id="classpath.runtime">
       <include name="xstream-*.jar" />
       <include name="xmlpull-*.jar" />
       <include name="xpp3_min*.jar" />
-      <include name="commons-codec-*.jar" />
     </fileset>
   </path>
 
