Download test (junit) libraries, instead of having them checked in.

--- a/build.xml
+++ b/build.xml
@@ -7,7 +7,6 @@
   <property name="build" value="out" />
   <property name="lib.dl" value="lib" />
   <property name="lib.main" value="jars/main" />
-  <property name="lib.test" value="jars/test" />
   <property name="res" value="res" />
   <property name="rel" value="release" />
 
@@ -53,7 +52,7 @@
 
   <path id="classpath.test">
     <path refid="classpath" />
-    <fileset dir="${lib.test}" />
+    <fileset dir="${lib.dl}" />
 
     <pathelement location="${build}" />
   </path>
